# MotionDetector

./: CMakeLists.txt  README.md
include/: MotionDetector.h
main/: CMakeLists.txt  main.cpp  main.h
src/: MotionDetector.cpp
